# discord-irc-bridge

./: Cargo.toml  config.toml.sample  readme.md
src/: issue.rs  main.rs  util.rs
