[package]
name = "etlbot"
version = "0.1.0"
authors = ["belst <git@bel.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight = { git = "https://github.com/twilight-rs/twilight" }
irc = { git = "https://github.com/aatxe/irc", branch = "0.14", features = ["default"] }
tokio = { version = "0.2", features = ["full" ] }
futures = "0.3"
structopt = "0.3"
anyhow = "1.0"
serde = "1.0"
toml = "0.4"
regex = "1.3"
lazy_static = "1.4"
reqwest =  { version = "0.10", features = ["json"] }